# pyplugin

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: codecov.yml  pylint.yml  pypi-publish.yml  pytest.yml
docs/: changelog.rst  conf.py  getting_started.rst  index.rst  reference.rst  settings.rst  user_guide.rst
docs/changelog/: changelog-0.1.0.rst  changelog-0.1.1.rst  changelog-0.2.0.rst  changelog-0.3.0.rst  changelog-0.3.1.rst  changelog-0.3.2.rst  changelog-0.3.3.rst  changelog-0.3.4.rst  changelog-0.3.5.rst  changelog-0.4.0.rst  changelog-0.4.1.rst  changelog-0.6.0.rst  development.rst
docs/reference/: base.rst  decorators.rst  exceptions.rst  group.rst  plugin.rst  pyplugin.rst  settings.rst  utils.rst
plugin/: __init__.py  base.py  exceptions.py
pyplugin/: __init__.py  base.py  decorators.py  exceptions.py  group.py  settings.py  types.py  utils.py
tests/: conftest.py  strategies.py  test_example.py  test_group.py  test_plugin_state.py  test_pyplugin.py
